...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_icon"
        android:title="@string/reports" />

    <item
        android:id="@+id/navigation_drafts"
        android:icon="@drawable/ic_drafts_icon"
...
